# gen

./: .gitignore  Cargo.toml  README.md
data/: Cargo.toml
data/src/: character.rs  lib.rs  lightcone.rs  relic.rs
icon/: Cargo.toml
icon/src/: lib.rs
index/: Cargo.toml
index/src/: character.rs  index.html  lib.rs  lightcone.rs  relic.rs
make/: Cargo.toml
make/src/: main.rs
microtest/: Cargo.toml
microtest/src/: main.rs
